# swift-corelibs-foundation

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PR_README.md  Package.swift  README.md  build-android  build.py  configure  install  vcpkg.json  xcode-build.sh
CoreFoundation/: CMakeLists.txt  CoreFoundation.rc  OlsonWindowsMapping.plist  WindowsResources.h  build.py
CoreFoundation/AppServices.subproj/: CFNotificationCenter.h  CFUserNotification.c  CFUserNotification.h
CoreFoundation/Base.subproj/: CFAsmMacros.h  CFAvailability.h  CFBase.c  CFBase.h  CFByteOrder.h  CFFileUtilities.c  CFInternal.h  CFKnownLocations.c  CFKnownLocations.h  CFLocking.h  CFLogUtilities.h  CFObjCTypes.h  CFOverflow.h  CFPlatform.c  CFPriv.h  CFRuntime.c  CFRuntime.h  CFRuntime_Internal.h  CFSortFunctions.c  CFSystemDirectories.c  CFUUID.c  CFUUID.h  CFUtilities.c  CFUtilities.h  CFWindowsUtilities.c  CoreFoundation.h  CoreFoundation_Prefix.h  DarwinSymbolAliases  ForFoundationOnly.h  ForSwiftFoundationOnly.h  SymbolAliases  module.modulemap  module.private.modulemap
CoreFoundation/CharacterSets/: CFCharacterSetBitmaps.bitmap  CFUniCharPropertyDatabase.data  CFUnicodeData-B.mapping  CFUnicodeData-L.mapping
CoreFoundation/Collections.subproj/: CFArray.c  CFArray.h  CFBag.c  CFBag.h  CFBasicHash.c  CFBasicHash.h  CFBasicHashFindBucket.c  CFBasicHashFindBucket.m  CFBinaryHeap.c  CFBinaryHeap.h  CFBitVector.c  CFBitVector.h  CFCollections_Internal.h  CFData.c  CFData.h  CFDictionary.c  CFDictionary.h  CFSet.c  CFSet.h  CFStorage.c  CFStorage.h  CFTree.c  CFTree.h
CoreFoundation/Error.subproj/: CFError.c  CFError.h  CFError_Private.h
CoreFoundation/Locale.subproj/: CFCalendar.c  CFCalendar.h  CFCalendar_Enumerate.c  CFCalendar_Internal.h  CFDateComponents.c  CFDateComponents.h  CFDateFormatter.c  CFDateFormatter.h  CFDateFormatter_Private.h  CFDateInterval.c  CFDateInterval.h  CFDateIntervalFormatter.c  CFDateIntervalFormatter.h  CFICULogging.h  CFListFormatter.c  CFListFormatter.h  CFLocale.c  CFLocale.h  CFLocaleIdentifier.c  CFLocaleInternal.h  CFLocaleKeys.c  CFLocale_Private.h  CFNumberFormatter.c  CFNumberFormatter.h  CFRelativeDateTimeFormatter.c
CoreFoundation/NumberDate.subproj/: CFBigNumber.c  CFBigNumber.h  CFDate.c  CFDate.h  CFNumber.c  CFNumber.h  CFNumberConstants.c  CFTimeZone.c  CFTimeZone.h
CoreFoundation/Parsing.subproj/: CFBinaryPList.c  CFOldStylePList.c  CFPropertyList.c  CFPropertyList.h  CFPropertyList_Private.h  CFXMLInputStream.c  CFXMLInputStream.h  CFXMLInterface.c  CFXMLInterface.h  CFXMLNode.c  CFXMLNode.h  CFXMLParser.c  CFXMLParser.h  CFXMLTree.c
CoreFoundation/PlugIn.subproj/: CFBundle.c  CFBundle.h  CFBundlePriv.h  CFBundle_Binary.c  CFBundle_BinaryTypes.h  CFBundle_DebugStrings.c  CFBundle_Executable.c  CFBundle_Grok.c  CFBundle_InfoPlist.c  CFBundle_Internal.h  CFBundle_Locale.c  CFBundle_Main.c  CFBundle_Resources.c  CFBundle_SplitFileName.c  CFBundle_SplitFileName.h  CFBundle_Strings.c  CFBundle_Strings.h  CFBundle_Tables.c  CFPlugIn.c  CFPlugIn.h  CFPlugInCOM.h  CFPlugIn_Factory.c  CFPlugIn_Factory.h  CFPlugIn_Instance.c  CFPlugIn_PlugIn.c
CoreFoundation/Preferences.subproj/: CFApplicationPreferences.c  CFPreferences.c  CFPreferences.h  CFXMLPreferencesDomain.c
CoreFoundation/RunLoop.subproj/: CFFileDescriptor.c  CFFileDescriptor.h  CFMachPort.c  CFMachPort.h  CFMachPort_Internal.h  CFMachPort_Lifetime.c  CFMachPort_Lifetime.h  CFMessagePort.c  CFMessagePort.h  CFRunLoop.c  CFRunLoop.h  CFSocket.c  CFSocket.h
CoreFoundation/Stream.subproj/: CFConcreteStreams.c  CFSocketStream.c  CFStream.c  CFStream.h  CFStreamAbstract.h  CFStreamInternal.h  CFStreamPriv.h
CoreFoundation/String.subproj/: CFAttributedString.c  CFAttributedString.h  CFAttributedStringPriv.h  CFBurstTrie.c  CFBurstTrie.h  CFCharacterSet.c  CFCharacterSet.h  CFCharacterSetData.S  CFCharacterSetPriv.h  CFRegularExpression.c  CFRegularExpression.h  CFRunArray.c  CFRunArray.h  CFString.c  CFString.h  CFStringDefaultEncoding.h  CFStringEncodingExt.h  CFStringEncodings.c  CFStringScanner.c  CFStringTransform.c  CFStringUtilities.c  CFString_Internal.h  CFString_Private.h  CFUniCharPropertyDatabase.S  CFUnicodeData.S
Foundation/: AffineTransform.swift  Array.swift  Boxing.swift  Bridging.swift  Bundle.swift  ByteCountFormatter.swift  CFInterface.swift  CGFloat.swift  CMakeLists.txt  Calendar.swift  CharacterSet.swift  Codable.swift  Collections+DataProtocol.swift  ConsistentCasting.swift  Data.swift  DataProtocol.swift  Date.swift  DateComponents.swift  DateComponentsFormatter.swift  DateFormatter.swift  DateInterval.swift  DateIntervalFormatter.swift  Decimal.swift  Dictionary.swift  DispatchData+DataProtocol.swift  EnergyFormatter.swift  ExtraStringAPIs.swift  FileHandle.swift  FileManager+POSIX.swift  FileManager+Win32.swift  FileManager.swift  FileManager_XDG.swift  Formatter.swift  Foundation.swift  FoundationErrors.swift  HTTPCookie.swift  HTTPCookieStorage.swift  Host.swift  ISO8601DateFormatter.swift  IndexPath.swift  (+184 more)
Sources/: CMakeLists.txt  swift_corelibs_foundation.swift
TestFoundation/: CMakeLists.txt  FTPServer.swift  FixtureValues.swift  HTTPServer.swift  TestAffineTransform.swift  TestBundle.swift  TestByteCountFormatter.swift  TestCachedURLResponse.swift  TestCalendar.swift  TestCastingUtils.swift  TestCharacterSet.swift  TestCodable.swift  TestData.swift  TestDate.swift  TestDateComponents.swift  TestDateFormatter.swift  TestDateInterval.swift  TestDateIntervalFormatter.swift  TestDecimal.swift  TestEnergyFormatter.swift  TestFTP.swift  TestFileHandle.swift  TestFileManager.swift  TestHTTPCookie.swift  TestHTTPCookieStorage.swift  TestHTTPURLResponse.swift  TestHost.swift  TestIOStream.swift  TestISO8601DateFormatter.swift  TestImports.swift  TestIndexPath.swift  TestIndexSet.swift  TestJSONEncoder.swift  TestJSONSerialization.swift  TestLengthFormatter.swift  TestLocale.swift  TestMassFormatter.swift  TestMeasurement.swift  TestMeasurementFormatter.swift  TestNSAffineTransform.swift  (+119 more)
Tests/: CMakeLists.txt  LinuxMain.swift  pre-push
(+1259 files in other folders)
